--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						Rizwan Ali
 					</h1>
 					<p>
-						Design and Developer in Australia who creates educational ontent on YouTube to teach others about HTML, CSS and Javascript. <span>I'm interested in AI topics which is why I also add things like ChatGPT into my projects these days.</span>
+						Full Stack Developer in India who creates educational content on YouTube to teach others about HTML-CSS  React-Js an MySQL. <span>I'm interested in AI topics which is why I also add things like ChatGPT into my projects these days.</span>
 					</p>
 					<div class="call-to-action">
 						<a href="./ResponceCV.pdf" target="_blank" class="button black">
@@ -64,6 +64,12 @@
 						<a href="https://www.linkedin.com/feed/" target="_blank">
 							<img src="./imgs/linkedin.png" alt="LinkedIn" width="48" />
 						</a>
+						<a href="https://www.youtube.com/@ThisOne-007" target="_blank">
+							<img src="./imgs/ytube.png" alt="LinkedIn" width="65" />
+						</a>
+						<a href="https://www.genpact.com/" target="_blank">
+							<img src="./imgs/genpact2.png" alt="LinkedIn" width="65" />
+						</a>
 					</div>
 				</div>
 			</div>
@@ -79,7 +85,7 @@
 					<img src="./imgs/javascript.png" alt="JS" width="128" />
 					<img src="./imgs/sass.png" width="128" alt="Sass" />
 					<img src="./imgs/react.png" width="128" alt="React" />
-					<img src="./imgs/nextjs.png" width="128" alt="Next JS" />
+					<img src="./imgs/mySQL2.png" width="128" alt="MySQL" />
 					<img src="./imgs/azure.png" width="128" alt="Azure" />
 					<img src="./imgs/vscode.png" width="128" alt="VS Code" />
 					<img src="./imgs/python.png" width="128" alt="Python" />
